fix: don't allow overflow on lite-youtube

--- a/src/css/compositions/_media.scss
+++ b/src/css/compositions/_media.scss
@@ -32,6 +32,10 @@
 	--aspect-ratio: 16 / 9;
 }
 
+lite-youtube {
+	overflow: hidden;
+}
+
 .lty-playbtn {
 	min-inline-size: 0;
 	margin: 0;
